add carbondata 1.1.0 support

--- a/streamingpro-spark/pom.xml
+++ b/streamingpro-spark/pom.xml
@@ -112,6 +112,21 @@
             </dependencies>
         </profile>
         <profile>
+            <id>carbondata-1.1.0</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.carbondata</groupId>
+                    <artifactId>carbondata-spark</artifactId>
+                    <version>1.1.0-incubating-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-repl_2.10</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>hive-thrift-server</id>
             <dependencies>
                 <dependency>
