--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -78,6 +78,23 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>carbondata-1.1.0</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.carbondata</groupId>
+                    <artifactId>carbondata-spark2</artifactId>
+                    <version>1.1.0-incubating-SNAPSHOT</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-repl_2.11</artifactId>
+                    <version>${spark.version}</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
         <profile>
             <id>online</id>
             <properties>
