--- a/streamingpro-spark-common/pom.xml
+++ b/streamingpro-spark-common/pom.xml
@@ -5,18 +5,17 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
-        <version>0.4.14-SNAPSHOT</version>
+        <version>0.4.15-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>streamingpro-spark-common</artifactId>
-
     <dependencies>
 
         <dependency>
             <groupId>streaming.king</groupId>
             <artifactId>streamingpro-common</artifactId>
-            <version>0.4.14-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
