--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>streamingpro</artifactId>
         <groupId>streaming.king</groupId>
-        <version>0.4.14-SNAPSHOT</version>
+        <version>0.4.15-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -37,15 +37,6 @@
                                 <goals>
                                     <goal>shade</goal>
                                 </goals>
-                                <!--<configuration>-->
-                                    <!--<relocations>-->
-                                        <!--<relocation>-->
-                                            <!--<pattern>org.eclipse.jetty</pattern>-->
-                                            <!--<shadedPattern>streaming.king.org.eclipse.jetty</shadedPattern>-->
-                                        <!--</relocation>-->
-
-                                    <!--</relocations>-->
-                                <!--</configuration>-->
                             </execution>
                         </executions>
                     </plugin>
@@ -112,51 +103,29 @@
                 <scope>compile</scope>
             </properties>
         </profile>
-        <!--<profile>-->
-            <!--<id>carbondata</id>-->
-            <!--<dependencies>-->
-                <!--<dependency>-->
-                    <!--<groupId>org.apache.carbondata</groupId>-->
-                    <!--<artifactId>carbondata-spark2</artifactId>-->
-                    <!--<version>1.1.0-rc1</version>-->
-                <!--</dependency>-->
-                <!--<dependency>-->
-                    <!--<groupId>org.apache.spark</groupId>-->
-                    <!--<artifactId>spark-repl_${scala.binary.version}</artifactId>-->
-                    <!--<version>${spark.version}</version>-->
-                <!--</dependency>-->
-            <!--</dependencies>-->
-        <!--</profile>-->
-    <profile>
-        <id>hive-thrift-server</id>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.spark</groupId>
-                <artifactId>spark-hive-thriftserver_${scala.binary.version}</artifactId>
-                <version>${spark.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.eclipse.jetty.aggregate</groupId>
-                        <artifactId>jetty-all</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-        </dependencies>
-    </profile>
+        <profile>
+            <id>hive-thrift-server</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.spark</groupId>
+                    <artifactId>spark-hive-thriftserver_${scala.binary.version}</artifactId>
+                    <version>${spark.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.eclipse.jetty.aggregate</groupId>
+                            <artifactId>jetty-all</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
-
-    <properties>
-        <spark.streaming.kafka.artifactId>spark-streaming-kafka-0-8_${scala.binary.version}</spark.streaming.kafka.artifactId>
-        <spark.sql.kafka.artifactId>spark-sql-kafka-0-10_${scala.binary.version}</spark.sql.kafka.artifactId>
-        <spark.version>2.1.1</spark.version>
-        <serviceframework.version>1.3.2-SNAPSHOT-${scala.binary.version}</serviceframework.version>
-    </properties>
 
     <dependencies>
         <dependency>
             <groupId>streaming.king</groupId>
             <artifactId>streamingpro-spark-common</artifactId>
-            <version>0.4.14-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
