--- a/streamingpro-spark/pom.xml
+++ b/streamingpro-spark/pom.xml
@@ -198,6 +198,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
