--- a/streamingpro-manager/pom.xml
+++ b/streamingpro-manager/pom.xml
@@ -91,6 +91,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
             <version>${scala.version}</version>
