--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scala.version>2.10.3</scala.version>
+        <scala.binary.version>2.10</scala.binary.version>
+        <spark.version>1.6.1</spark.version>
         <flink.version>1.2.0</flink.version>
+        <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
+        <streamingpro.version>0.4.7</streamingpro.version>
+        <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
         <serviceframework.version>1.3.2-SNAPSHOT</serviceframework.version>
         <scope>provided</scope>
     </properties>
