chage config file to db

--- a/streamingpro-manager/src/main/resources-local/application.yml
+++ b/streamingpro-manager/src/main/resources-local/application.yml
@@ -19,6 +19,7 @@ test:
 
 application:
     controllerNames: streaming.rest.RestController
+    helper: streaming.helper
     service:
     util:
     test:
