--- a/streamingpro-spark-2.0/src/main/resources-online/application.yml
+++ b/streamingpro-spark-2.0/src/main/resources-online/application.yml
@@ -41,6 +41,7 @@ serviceframework:
 ###############http config##################
 http:
     disable: false
+    host: 0.0.0.0
     class:
         port: streaming.common.SpecificPortGenerator
 thrift:
