--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>streamingpro-spark-common</module>
         <module>streamingpro-manager</module>
         <module>streamingpro-api</module>
+        <module>streamingpro-dsl</module>
     </modules>
 
     <properties>
