--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -102,6 +102,13 @@
                 <mode>local</mode>
                 <scope>compile</scope>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.elasticsearch</groupId>
+                    <artifactId>elasticsearch-spark-20_2.11</artifactId>
+                    <version>5.5.2</version>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>hive-thrift-server</id>
