load和save语法支持options参数；支持kafka写入

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,4 @@ project/plugins/project/
 /streamingpro-manager/src/main/resources-local/jdbc.properties
 
 /streamingpro-dsl/gen
+/streamingpro-hbase/streamingpro-hbase.iml
