--- a/streamingpro-hbase/pom.xml
+++ b/streamingpro-hbase/pom.xml
@@ -13,8 +13,22 @@
     <dependencies>
         <dependency>
             <groupId>streaming.king</groupId>
-            <artifactId>streamingpro-spark-2.0</artifactId>
-            <version>1.0.0</version>
+            <artifactId>streamingpro-spark-common</artifactId>
+            <version>${parent.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.hbase</groupId>
