add sql ml support

--- a/streamingpro-commons/pom.xml
+++ b/streamingpro-commons/pom.xml
@@ -23,6 +23,10 @@
                     <groupId>javax.servlet</groupId>
                     <artifactId>servlet-api</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
