--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -76,7 +76,7 @@
                 <dependency>
                     <groupId>org.apache.carbondata</groupId>
                     <artifactId>carbondata-spark2</artifactId>
-                    <version>1.1.0</version>
+                    <version>1.1.0-incubating-SNAPSHOT</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.spark</groupId>
