支持tensorflow 模型预测

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>streamingpro-dsl</module>
         <module>streamingpro-hbase</module>
         <module>streamingpro-redis</module>
+        <module>streamingpro-tensorflow</module>
     </modules>
 
     <properties>
