--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -155,6 +155,13 @@
 
         <dependency>
             <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-tensorflow</artifactId>
+            <version>${parent.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>streaming.king</groupId>
             <artifactId>streamingpro-dsl</artifactId>
             <version>${parent.version}</version>
         </dependency>
