--- a/streamingpro-tensorflow/pom.xml
+++ b/streamingpro-tensorflow/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.tensorflow</groupId>
             <artifactId>libtensorflow</artifactId>
-            <version>1.5.0-rc1</version><version>1.5.0</version>
+            <version>1.5.0-rc1</version>
         </dependency>
         <dependency>
             <groupId>org.tensorflow</groupId>
