--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,17 @@
 
     <repositories>
         <repository>
+            <id>aliyun</id>
+            <name>Nexus Release Repository</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>cloudera</id>
             <url>https://repositonry.cloudera.com/artifactory/cloudera-repos/</url>
         </repository>
