--- a/streamingpro-model/pom.xml
+++ b/streamingpro-model/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>streamingpro-tensorflow</artifactId>
+    <artifactId>streamingpro-model</artifactId>
     <dependencies>
         <dependency>
             <groupId>org.tensorflow</groupId>
@@ -28,6 +28,23 @@
             <version>2.6.5</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>dl4j-spark_2.11</artifactId>
+            <version>0.9.1_spark_2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>dl4j-spark-parameterserver_2.11</artifactId>
+            <version>0.9.1_spark_2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
