--- a/streamingpro-spark-2.0/pom.xml
+++ b/streamingpro-spark-2.0/pom.xml
@@ -85,7 +85,6 @@
                 </dependency>
             </dependencies>
         </profile>
-
         <profile>
             <id>online</id>
             <properties>
@@ -135,22 +134,22 @@
             <version>${parent.version}</version>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>streaming.king</groupId>-->
-            <!--<artifactId>streamingpro-hbase</artifactId>-->
-            <!--<version>${parent.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.eclipse.jetty</groupId>-->
-                    <!--<artifactId>jetty-server</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-            <!--<scope>compile</scope>-->
+        <!--<groupId>streaming.king</groupId>-->
+        <!--<artifactId>streamingpro-hbase</artifactId>-->
+        <!--<version>${parent.version}</version>-->
+        <!--<exclusions>-->
+        <!--<exclusion>-->
+        <!--<groupId>org.eclipse.jetty</groupId>-->
+        <!--<artifactId>jetty-server</artifactId>-->
+        <!--</exclusion>-->
+        <!--</exclusions>-->
+        <!--<scope>compile</scope>-->
         <!--</dependency>-->
         <!--<dependency>-->
-            <!--<groupId>streaming.king</groupId>-->
-            <!--<artifactId>streamingpro-redis</artifactId>-->
-            <!--<version>${parent.version}</version>-->
-            <!--<scope>compile</scope>-->
+        <!--<groupId>streaming.king</groupId>-->
+        <!--<artifactId>streamingpro-redis</artifactId>-->
+        <!--<version>${parent.version}</version>-->
+        <!--<scope>compile</scope>-->
         <!--</dependency>-->
 
         <dependency>
@@ -161,7 +160,7 @@
 
         <dependency>
             <groupId>streaming.king</groupId>
-            <artifactId>streamingpro-tensorflow</artifactId>
+            <artifactId>streamingpro-model</artifactId>
             <version>${parent.version}</version>
         </dependency>
 
