--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>streamingpro-dsl</module>
         <module>streamingpro-hbase</module>
         <module>streamingpro-redis</module>
-        <module>streamingpro-tensorflow</module>
+        <module>streamingpro-model</module>
     </modules>
 
     <properties>
@@ -314,8 +314,6 @@
         </dependency>
 
 
-
-
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
@@ -345,6 +343,24 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.22</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.1.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>1.1.8</version>
         </dependency>
 
     </dependencies>
