--- a/pom.xml
+++ b/pom.xml
@@ -175,9 +175,52 @@
             </modules>
             <dependencies>
                 <dependency>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>javax.servlet-api</artifactId>
+                    <version>3.1.0</version>
+                </dependency>
+                <dependency>
                     <groupId>net.csdn</groupId>
                     <artifactId>serviceframework-jetty-9-server</artifactId>
                     <version>${serviceframework.version}</version>
+                    <exclusions>
+                        <!--<exclusion>-->
+                            <!--<groupId>org.eclipse.jetty</groupId>-->
+                            <!--<artifactId>jetty-server</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                            <!--<groupId>org.eclipse.jetty</groupId>-->
+                            <!--<artifactId>jetty-http</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                            <!--<groupId>org.eclipse.jetty</groupId>-->
+                            <!--<artifactId>jetty-io</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                            <!--<groupId>org.eclipse.jetty</groupId>-->
+                            <!--<artifactId>jetty-continuation</artifactId>-->
+                        <!--</exclusion>-->
+                        <!--<exclusion>-->
+                            <!--<groupId>org.eclipse.jetty</groupId>-->
+                            <!--<artifactId>jetty-util</artifactId>-->
+                        <!--</exclusion>-->
+                        <exclusion>
+                            <groupId>org.eclipse.jetty</groupId>
+                            <artifactId>jetty-servlet</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>junit</groupId>
+                            <artifactId>junit</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.scala-lang</groupId>
+                            <artifactId>jline</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>com.alibaba</groupId>
+                            <artifactId>dubbo</artifactId>
+                        </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
