--- a/streamingpro-model/pom.xml
+++ b/streamingpro-model/pom.xml
@@ -23,10 +23,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-client</artifactId>
-            <version>2.6.5</version>
-            <scope>compile</scope>
+            <groupId>streaming.king</groupId>
+            <artifactId>streamingpro-common</artifactId>
+            <version>${parent.version}</version>
         </dependency>
 
         <dependency>
@@ -43,6 +42,7 @@
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-native-platform</artifactId>
             <version>0.9.1</version>
+            <!--<classifier>macosx-x86_64</classifier>-->
         </dependency>
 
     </dependencies>
