--- a/streamingpro-model/pom.xml
+++ b/streamingpro-model/pom.xml
@@ -45,6 +45,12 @@
             <!--<classifier>macosx-x86_64</classifier>-->
         </dependency>
 
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-kryo_2.11</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
